# fitness-coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/: config.py  main.py
src/api/: app.py
src/api/routes/: activities.py  fitness.py  nutrition.py  wellness.py
src/bot/: bot.py
src/bot/commands/: nutrition.py  status.py  summary.py
src/integrations/: base.py
src/integrations/intervals_icu/: client.py  models.py
src/models/: database.py  tables.py
src/scheduler/: jobs.py
src/services/: activity_analyzer.py  ai_engine.py  fitness_tracker.py  nutrition_planner.py
tests/test_services/: test_activity_analyzer.py  test_fitness_tracker.py  test_nutrition_planner.py
